Moved from Java 1.6->1.4. This means a slight workaround for XML fetching, and also removing all 1.5/1.6 code.